# prowler-studio

./: .env.template  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  __main__.py  docker-compose.yml  prowler-studio  pyproject.toml  studio_cli
ai/src/: __main__.py  events.py  workflow.py
ai/src/utils/: llm_chooser.py  llm_structured_outputs.py  prompt_loader.py  workflow_check_creation_examples.py
api/: Dockerfile  container-entrypoint.sh  deployment.yml  pyproject.toml
api/prowler_studio/_api/: main.py
api/src/: main.py  workflow.py
api/workflows/check_creation/: Dockerfile  container-entrypoint.sh  deployment.yml
api/workflows/check_creation/src/: workflow.py
cli/: Dockerfile  pyproject.toml
cli/config/: config.yaml
cli/prowler_studio/_cli/: __init__.py  __main__.py  config.yaml
cli/prowler_studio/_cli/commands/: build_rag.py  create_check.py  create_fixer.py  update_compliance.py
cli/prowler_studio/_cli/utils/: config.py  file_io.py
cli/prowler_studio/_cli/views/: menus.py  output.py  prompts.py
cli/src/: __main__.py
cli/src/commands/: build_rag.py  create_check.py  update_compliance.py
cli/src/utils/: config.py  file_io.py  logging.py
cli/src/views/: menus.py  output.py  prompts.py
core/: pyproject.toml
core/indexed_check_metadata_db/: db_metadata.json  docstore.json  image__vector_store.json  index_store.json
core/indexed_data_db/: docstore.json  index_metadata.json  index_store.json
core/indexed_data_db/indexed_data_db/: docstore.json  index_metadata.json  index_store.json
core/prowler_studio/core/rag/: check_inventory.py  utils.py  vector_store.py
core/prowler_studio/core/rag/indexed_check_metadata_db/: db_metadata.json  docstore.json  graph_store.json  index_store.json
core/prowler_studio/core/workflows/check_creation/: events.py  workflow.py
core/prowler_studio/core/workflows/check_creation/prompts/: prompt_manager.py
core/prowler_studio/core/workflows/check_creation/prompts/templates/generic/: basic_filter.jinja  check_code_generation.jinja  identify_needed_calls_attributes.jinja  is_service_complete.jinja  modify_service.jinja  pretify_final_answer.jinja  prowler_studio_context.txt  service_extraction.jinja
core/prowler_studio/core/workflows/check_creation/utils/: check_metadata_model.py
core/prowler_studio/core/workflows/compliance_updater/: workflow.py
core/prowler_studio/core/workflows/fixer_creation/: enum_steps.py  events.py  workflow.py
core/prowler_studio/core/workflows/fixer_creation/prompts/: prompt_manager.py
core/prowler_studio/core/workflows/fixer_creation/prompts/templates/generic/: fixer_code_generation.jinja  pretify_final_answer.jinja
core/prowler_studio/core/workflows/utils/: prompt_manager.py
core/src/: events.py  workflow.py
core/src/rag/: check_inventory.py  vector_store.py  vectore_store.py
core/src/utils/: build_rag_dataset.py  llm_chooser.py  llm_structured_outputs.py  model_chooser.py  prompt_loader.py  prowler_information.py  rag.py  relevant_check_retriever.py  workflow_check_creation_examples.py
core/src/workflows/check_creation/: events.py  workflow.py
core/src/workflows/check_creation/prompts/: prompt_manager.py
core/src/workflows/check_creation/prompts/templates/generic/: audit_steps_extraction.jinja  basic_filter.jinja  check_metadata_generation.jinja  check_name_design.jinja  provider_extraction.jinja  remediation_generation.jinja  user_input_summary.jinja
core/src/workflows/check_creation/utils/: prompt_steps_enum.py
core/src/workflows/compliance_updater/: events.py  workflow.py
core/src/workflows/compliance_updater/utils/: compliance_validator.py
core/src/workflows/utils/: prompt_manager.py
docs/: chatbot.md  cli.md  core.md  mcp_server.md
mcp_server/: Dockerfile  README.md  pyproject.toml
mcp_server/prowler_studio/mcp_server/: main.py
mcp_server/src/mcp_server_prowler_studio/: main.py  mcp_server.py
ui/: Dockerfile  README.md  package-lock.json  package.json
ui/public/: index.html  manifest.json
ui/src/: App.tsx  utils.ts
