[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = [
  "bandit>=1.7.10",
  "pylint>=3.3.1",
  "safety>=3.2.10",
  "vulture>=2.13"
]

[project]
authors = [
  {name = "Prowler Team"}
]
dependencies = [
  "prowler-studio-core==0.0.1",
  "prowler-studio-cli==0.0.1"
]
description = "Prowler Studio"
license = {file = "LICENSE"}
name = "prowler-studio"
readme = "README.md"
requires-python = ">=3.12"
version = "0.0.1"

[project.optional-dependencies]
api = [
  "prowler-studio-api==0.0.1"
]

[tool.hatch.build.targets.wheel]
packages = ["src/prowler_studio"]

[tool.uv.sources]
prowler-studio-api = {workspace = true}
prowler-studio-cli = {workspace = true}
prowler-studio-core = {workspace = true}

[tool.uv.workspace]
members = [
  "core",
  "cli",
  "api"
]
