[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {name = "Prowler Team"}
]
dependencies = [
  "prowler-studio-core==0.0.1",
  "typer==0.15.2",
  "simple-term-menu==1.6.6"
]
description = "Command Line Interface for Prowler Studio"
name = "prowler-studio-cli"
requires-python = ">=3.12"
version = "0.0.1"

[project.scripts]
prowler-studio = "prowler_studio._cli.__main__:app"

[tool.hatch.build]
packages = ["prowler_studio"]

[tool.uv.sources]
prowler-studio-core = {workspace = true}
