[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {name = "Prowler Team"}
]
dependencies = [
  "mcp[cli]==1.6.0",
  "prowler-studio-core==0.0.1"
]
description = "MCP Server for Prowler Studio"
name = "prowler-studio-mcp-server"
requires-python = ">=3.12"
version = "0.0.1"

[project.scripts]
prowler-studio-mcp-server = "prowler_studio.mcp_server.main:main"

[tool.hatch.build]
packages = ["prowler_studio"]

[tool.uv.sources]
prowler-studio-core = {workspace = true}
